--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <p class="lead">Eu sou Vitor Gabriel</p>
         <h1>Eu aprendo Programação</h1>
         <p>Sou Vitor
-             sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projEngenheiro de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensinoetos
-            que já desenvolvi!</p>
+         sou bom em 
+         
+    
+        </p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
