--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="lead">Eu sou Vitor Gabriel</p>
         <h1>Eu aprendo Programação</h1>
         <p>Sou Vitor
-         sou bom em 
+         sou bom em trabalha e em lanchar
          
     
         </p>
