--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">come</p>
+            <p class="badge bg-secondary">trabalha</p>
+            <p class="badge bg-secondary">estuda</p>
+            <p class="badge bg-secondary">dormi/p>
         </div>
     </header>
     <main class="container mt-5">
